# mtproto-panel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_frontend.sh  docker-compose.yml  double-hop-xray.txt  instr.txt  pyproject.toml  requirements.txt  run_panel.cmd  run_panel.sh
alembic/: env.py
alembic/versions/: 20260419_0001_initial_schema.py  20260419_0002_monitor_add_telegram_api_base_url.py  20260419_0003_monitor_add_telegram_thread_id.py
app/: cloud_schemas.py  cloud_settings.py  deploy.py  main.py  panel_auth_settings.py  presets.py  remote_telemt_config.py  server_schemas.py  server_store.py  ssh_conn.py  ws_auth.py
app/providers/: vdsina.py
app/templates/: telemt.service.j2  telemt.toml.j2
config/: cloudflare_dns_targets.example.json
deploy/: Dockerfile  docker-entrypoint.sh  init_docker_secrets.sh  nginx-panel-ws.example.conf  postgres.default.env
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: cloudflare_sync_dns.py  gen_panel_password_hash.py  init_docker_secrets.sh  migrate_json_to_postgres.py  verify_auth_integration.py
src/app/: __init__.py  auth_http.py  auth_passwords.py  auth_router.py  auth_tokens.py  cloud_router.py  cloud_settings.py  cloudflare_panel.py  cloudflare_router.py  cloudflare_schemas.py  cloudflare_settings.py  cloudflare_targets.py  db.py  db_settings.py  http_shared.py  legacy_data_import.py  main.py  metrics_history.py  metrics_prom.py  metrics_remote.py  (+12 more)
static/: app.js  index.html  styles.css
(+30 files in other folders)
